test/shouldnt-compile/int-conversion.cpp
#include "common.hpp"


void check() {
  Enums es = Enums::underlying_type{1}; // conversion from an integer
}
